<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity">
    <LinearLayout
            android:id="@+id/main_activity_layout"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="12"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent">
        <TextView
                android:textAllCaps="true"
                android:textSize="20sp"
                android:layout_weight="2"
                android:text="@string/histrory_view_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/calculation_history_text_view"/>
        <LinearLayout
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:textAllCaps="true"
                    android:textSize="28sp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/calc_operation_textView"/>
            <TextView
                    android:textAllCaps="true"
                    android:textSize="28sp"
                    android:text="@string/input_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/calc_input_textView"/>
        </LinearLayout>
        <TextView
                android:textColor="@color/colorPrimaryDark"
                android:textAllCaps="true"
                android:textSize="32sp"
                android:layout_weight="2"
                android:text="@string/result_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/calc_result_textView"/>
            <LinearLayout
                android:weightSum="4"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            <Button
                    android:layout_weight="1"
                    android:id="@+id/button_calc_7"
                    android:textSize="24sp"
                    android:text="@string/number_7"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:onClick="onCharInput"/>
=======
                    android:onClick="inputNumberOperation"/>
>>>>>>> 9bf9c8c46a77dacf0345f9eec5ab1d572c524c7a
            <Button
                    android:layout_weight="1"
                    android:id="@+id/button_calc_8"
                    android:textSize="24sp"
                    android:text="@string/number_8"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:onClick="onCharInput"/>
=======
                    android:onClick="inputNumberOperation"/>
>>>>>>> 9bf9c8c46a77dacf0345f9eec5ab1d572c524c7a
            <Button
                    android:layout_weight="1"
                    android:id="@+id/button_calc_9"
                    android:textSize="24sp"
                    android:text="@string/number_9"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:onClick="onCharInput"/>
=======
                    android:onClick="inputNumberOperation"/>
>>>>>>> 9bf9c8c46a77dacf0345f9eec5ab1d572c524c7a
            <Button
                    android:layout_weight="1"
                    android:id="@+id/button_calc_divide"
                    android:textSize="24sp"
                    android:text="/"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="onOperationInput"/>
        </LinearLayout>

        <LinearLayout
                android:weightSum="4"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            <Button
                    android:layout_weight="1"
                    android:id="@+id/button_calc_4"
                    android:textSize="24sp"
                    android:text="@string/number_4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:onClick="onCharInput"/>
=======
                    android:onClick="inputNumberOperation"/>
>>>>>>> 9bf9c8c46a77dacf0345f9eec5ab1d572c524c7a
            <Button
                    android:layout_weight="1"
                    android:id="@+id/button_calc_5"
                    android:textSize="24sp"
                    android:text="@string/number_5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:onClick="onCharInput"/>
=======
                    android:onClick="inputNumberOperation"/>
>>>>>>> 9bf9c8c46a77dacf0345f9eec5ab1d572c524c7a
            <Button
                    android:layout_weight="1"
                    android:id="@+id/button_calc_6"
                    android:textSize="24sp"
                    android:text="@string/number_6"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:onClick="onCharInput"/>
=======
                    android:onClick="inputNumberOperation"/>
>>>>>>> 9bf9c8c46a77dacf0345f9eec5ab1d572c524c7a
            <Button
                    android:layout_weight="1"
                    android:id="@+id/button_calc_multiply"
                    android:textSize="24sp"
                    android:text="*"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="onOperationInput"/>
        </LinearLayout>

        <LinearLayout
                android:weightSum="4"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            <Button
                    android:layout_weight="1"
                    android:id="@+id/button_calc_1"
                    android:textSize="24sp"
                    android:text="@string/number_1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:onClick="onCharInput"/>
=======
                    android:onClick="inputNumberOperation"/>
>>>>>>> 9bf9c8c46a77dacf0345f9eec5ab1d572c524c7a
            <Button
                    android:layout_weight="1"
                    android:id="@+id/button_calc_2"
                    android:textSize="24sp"
                    android:text="@string/number_2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:onClick="onCharInput"/>
=======
                    android:onClick="inputNumberOperation"/>
>>>>>>> 9bf9c8c46a77dacf0345f9eec5ab1d572c524c7a
            <Button
                    android:layout_weight="1"
                    android:id="@+id/button_calc_3"
                    android:textSize="24sp"
                    android:text="@string/number_3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:onClick="onCharInput"/>
=======
                    android:onClick="inputNumberOperation"/>
>>>>>>> 9bf9c8c46a77dacf0345f9eec5ab1d572c524c7a
            <Button
                    android:layout_weight="1"
                    android:id="@+id/button_calc_minus"
                    android:textSize="24sp"
                    android:text="-"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="onOperationInput"/>
        </LinearLayout>

        <LinearLayout
                android:weightSum="4"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
            <Button
                    android:layout_weight="1"
                    android:id="@+id/button_calc_reset"
                    android:textSize="24sp"
                    android:text="C"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="onClearInput"/>
            <Button
                    android:layout_weight="1"
                    android:id="@+id/button_calc_0"
                    android:textSize="24sp"
                    android:text="@string/number_0"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:onClick="onCharInput"/>
=======
                    android:onClick="inputNumberOperation"/>
>>>>>>> 9bf9c8c46a77dacf0345f9eec5ab1d572c524c7a
            <Button
                    android:layout_weight="1"
                    android:id="@+id/button_calc_dot"
                    android:textSize="24sp"
                    android:text="@string/dot"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:onClick="onCharInput"/>
=======
                    android:onClick="getPrintDotOperation"/>
>>>>>>> 9bf9c8c46a77dacf0345f9eec5ab1d572c524c7a
            <Button
                    android:layout_weight="1"
                    android:id="@+id/button_calc_plus"
                    android:textSize="24sp"
                    android:text="+"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="onOperationInput"/>
        </LinearLayout>

        <LinearLayout
                android:weightSum="16"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2">
            <Button
                    android:layout_weight="1"
                    android:id="@+id/button_delete_last_char"
                    android:textSize="24sp"
                    android:text="A"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
<<<<<<< HEAD
                    android:onClick="onDeleteInput"/>
=======
                    android:onClick="getDeleteLastChar"/>
>>>>>>> 9bf9c8c46a77dacf0345f9eec5ab1d572c524c7a
            <Button
                    android:layout_weight="15"
                    android:id="@+id/button_calc_result"
                    android:text="="
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="onResultInput"/>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>